--- a/app/navbar/NavBar.css
+++ b/app/navbar/NavBar.css
@@ -122,7 +122,6 @@
   margin-left: auto;
   border-radius: 50%;
   z-index: 5;
-  width: 6.1rem;
   position: relative;
   right: 10px;
   top: 17px;
@@ -234,7 +233,7 @@
   position: fixed; /* Fixes the button relative to the viewport */
   right: 0; /* Aligns the button to the right edge */
   bottom: 0; /* Aligns the button to the bottom edge */
-  margin: 115px 30px; /* Optional: adds some space from the edges */
+  margin: 110px 30px; /* Optional: adds some space from the edges */
   z-index: 99;
 }
 @keyframes showUp {
@@ -327,6 +326,7 @@
   top: 0;
   right: 0;
   width: 100%;
+  overflow: auto;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
   z-index: 110;
@@ -379,35 +379,6 @@
   z-index: 1; */
   background-color: #b90124;
 }
-.form-btn-container {
-  position: fixed;
-  box-sizing: border-box;
-  z-index: 999;
-  padding-bottom: 15vh;
-  width: fit-content;
-  height: 100vh;
-  display: flex;
-  align-items: flex-end;
-}
-
-.form-btn-container .form-open-btn {
-  position: fixed;
-  left: 0;
-  background-color: #60bab1a4;
-  color: #000;
-  padding: 50px 10px;
-  border: none;
-  text-align: center;
-  font-size: 18px;
-  font-weight: bold;
-  border-radius: 0px 10px 10px 0px;
-  text-decoration: none;
-  z-index: 1000;
-  writing-mode: vertical-rl;
-  text-orientation: sideways-right;
-  transition: background-color 0.3s;
-}
-
 @media (max-width: 1600px) {
   .navbar-main-div-global .navbar-list-main .title {
     font-size: 1rem;
@@ -490,16 +461,7 @@
     gap: 0rem;
     display: none;
   }
-  .chat-btn {
-    width: 65px;
-    height: 65px;
-    font-size: 40px;
-    position: fixed; /* Fixes the button relative to the viewport */
-    right: 0; /* Aligns the button to the right edge */
-    bottom: 0; /* Aligns the button to the bottom edge */
-    margin: 105px 30px; /* Optional: adds some space from the edges */
-    z-index: 99;
-  }
+
   .navbar-main-div-global .navbar-list-main .title {
     font-weight: 100;
     font-size: 0;
@@ -513,7 +475,7 @@
   .options-btn {
     right: 5px;
     top: 5px;
-    width: 4.2rem;
+    width: 5rem;
   }
   .options-btn .menu-icon-div {
     width: 1.5rem;
@@ -526,6 +488,7 @@
   }
   .options-btn .options {
     height: auto;
+    width: 100%;
   }
   .options-btn:hover .menu-icon {
     display: block;
@@ -537,9 +500,6 @@
     height: 4.5rem;
     background: transparent;
     top: 0rem;
-  }
-  .form-btn-container {
-    display: none;
   }
   .bottom-bar-all-pages {
     position: fixed;
@@ -565,5 +525,15 @@
     justify-content: center;
     color: #fff;
     text-wrap: nowrap;
+  }
+  .chat-btn {
+    width: 55px;
+    height: 55px;
+    font-size: 35px;
+    position: fixed; /* Fixes the button relative to the viewport */
+    right: 0; /* Aligns the button to the right edge */
+    bottom: 0; /* Aligns the button to the bottom edge */
+    margin: 110px 30px; /* Optional: adds some space from the edges */
+    z-index: 99;
   }
 }
